# py-eacopy

./: .cibuildwheel.toml  .coveragerc  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Cargo.toml  MANIFEST.in  README.md  README_RUST.md  README_zh.md  build.bat  build.rs  build.sh  noxfile.py  pyproject.toml  pytest.ini  xdelta3.h.patch
.github/: release-template.md
.github/actions/build-wheels/: action.yml
.github/actions/setup-python-build/: action.yml
.github/actions/test-wheel/: action.yml
.github/workflows/: README.md  build-vcpkg.yml  build.yml  codecov.yml  docs.yml  main.yml  release.yml  rust.yml  rust_build.yml  semantic-release.yml
@wheelhouse/: py_eacopy-0.0.1-cp38-abi3-win_amd64.whl
benches/: copy_benchmark.rs
cmake/: CPM.cmake
cmake/modules/: UseCCache.cmake
docs/: rust_implementation.md  testing.md
docs/examples/: delta_copy_example.md  server_example.md
examples/: basic_usage.py  server_example.py  unicode_path_example.py
nox_actions/: __init__.py  build.py  codetest.py  docs.py  lint.py  utils.py
src/: bindings.rs  config.rs  eacopy.rs  error.rs  ffi.rs  lib.rs  python.rs  utils.rs
src/binding/: EACopyLib.lib  eacopy_binding.cpp  eacopy_module.cpp  eacopy_wrapper.cpp
src/eacopy/: cli.py  mod.rs
src/py_eacopy/: __init__.py  __version__.py  config.py  error_handling.py
tests/: conftest.py  conftest_simplified.py  test_async.py  test_basic.py  test_callbacks.py  test_cli.py  test_config.py  test_delta_copy.py  test_error_handling.py  test_performance.py  test_rust_binding.py  test_server.py  test_simplified.py  test_unicode.py  test_version.py
tools/wheels/: build_unix_wheel.py  build_windows_wheel.py
