[build-system]
requires = [
    "maturin>=1.4,<2.0",
]
build-backend = "maturin"

[project]
name = "py-eacopy"
version = "0.0.1"
description = "Python bindings for EACopy, a high-performance file copy tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Long Hao", email = "hal.long@outlook.com"},
]
dependencies = [
    "click>=8.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: System :: Filesystems",
]

[project.optional-dependencies]
dev = [
    "nox>=2023.4.22",
]
test = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
]
docs = [
    "sphinx>=7.0.0",
    "pydata-sphinx-theme>=0.14.1",
    "sphinx-autobuild>=2021.3.14",
    "myst-parser>=2.0.0",
    "sphinx-gallery>=0.13.0",
    "pillow>=9.0.0",
    "myst-sphinx-gallery>=0.3.0",
    "myst-nb>=1.0.0",
    "tomli>=2.0.0",
]
lint = [
    "black<25.1.1",
    "ruff<0.0.270",
    "isort<6.0.2",
    "autoflake>=2.0.0",
]
build = [
    "build>=0.10.0",
    "twine>=4.0.2",
    "cibuildwheel>=2.16.0",
]

[project.urls]
Homepage = "https://github.com/loonghao/py-eacopy"
Documentation = "https://loonghao.github.io/py-eacopy"
Issues = "https://github.com/loonghao/py-eacopy/issues"
Changelog = "https://github.com/loonghao/py-eacopy/blob/main/CHANGELOG.md"

[project.scripts]
eacopy = "py_eacopy.cli:main"

[tool.maturin]
# Python module name
python-source = "src"
module-name = "py_eacopy._eacopy_binding"
# Build features
features = ["python"]
# Compatibility settings
target-list = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "x86_64-apple-darwin"]
# Use abi3 for better compatibility
abi3 = true
# Minimum Python version for abi3
abi3-py38 = true
# Strip debug symbols
strip = true
# Exclude files from sdist
sdist-include = ["LICENSE", "README.md", "CHANGELOG.md", "extern/EACopy/**/*"]
# Exclude files from wheel
exclude = ["tests/*", "docs/*", "examples/*", ".github/*", "nox_actions/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "basic: Basic functionality tests",
    "config: Configuration tests",
    "error_handling: Error handling tests",
    "async: Asynchronous functionality tests",
    "performance: Performance tests",
    "unicode: Unicode/non-ASCII path handling tests",
    "callbacks: Callback functionality tests",
    "cli: Command-line interface tests",
]
